hphp/test/zend/good/Zend/tests/sub_001.php.expectf

Fatal error: Uncaught exception 'InvalidOperationException' with message 'Invalid operand type was used: cannot perform this operation with vecs' in %s/sub_001.php:6
Stack trace:
%A
